adding swagger annotations 2
